k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: pnp-smit
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: node-app
          image: pnp-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
