k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
